--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,6 +2,9 @@ homepage: "https://piwik.pro/"
 documentation: "https://help.piwik.pro/"
 versions:
   # Latest version
+  - sha: 0205cc5e4bfbe532eac95da5bd1e21d8b744f00d
+    changeNotes: Added the ability to recognize Google Tag Manager as a traffic source in Tracker debugger.
+  # Second version
   - sha: ca3be5c95ee5347f79c5d75d50cf6f2ba35f022e
     changeNotes: UX improvements.
   # First version
